--- a/terminal-frontend/src/components/manual-pickup-popup-window/style.css
+++ b/terminal-frontend/src/components/manual-pickup-popup-window/style.css
@@ -25,8 +25,10 @@ input[type=text] {
 }
 
 #ticketPicture {
+    /* Set dimensions to fix page jump */
     height: 307px;
-    width: auto;
+    width: 280px;
+    
     display: block;
     margin: auto;
     border: 2px solid #150d17;
